fix: add missing translations

--- a/src/shared/locales/fr/translation.json
+++ b/src/shared/locales/fr/translation.json
@@ -45,5 +45,7 @@
   "No Input": "Aucune entrée",
   "Exchange Not Found": "Échange non trouvé",
   "Back": "Retour",
-  "Message": "Message"
+  "Message": "Message",
+  "Not At All": "Pas du tout",
+  "Very Strongly": "Tout à fait"
 }
