feat: add settings components

--- a/src/shared/locales/fr/translation.json
+++ b/src/shared/locales/fr/translation.json
@@ -47,5 +47,8 @@
   "Back": "Retour",
   "Message": "Message",
   "Not At All": "Pas du tout",
-  "Very Strongly": "Tout à fait"
+  "Very Strongly": "Tout à fait",
+  "Settings": "Paramètres",
+  "Edit": "Éditer",
+  "Edit Settings": "Éditer Paramètres"
 }
