--- a/src/shared/locales/fr/translation.json
+++ b/src/shared/locales/fr/translation.json
@@ -9,9 +9,12 @@
   "Copy": "Copier",
   "Paste": "Coller",
   "Delete": "Effacer",
+  "Save": "Sauvegarder",
   "Select All": "Tout sélectionner",
+  "Rename": "Renommer",
   "View": "Vue",
   "Reload": "Recharger",
+  "Download": "Télécharger",
   "Force Reload": "Recharger de force",
   "Toggle Developer Tools": "Basculer les outils de développement",
   "Reset Zoom": "Réinitialiser le zoom",
@@ -22,10 +25,12 @@
   "Window": "Fenêtre",
   "Minimize": "Minimiser",
   "Zoom": "Zoom",
+  "Move": "Déplacer",
   "Close": "Fermer",
   "Help": "Aide",
   "Learn More": "En savoir plus",
   "Home": "Accueil",
+  "User": "Utilisateur",
   "Experiments": "Expériences",
   "Simulations": "Simulations",
   "Interactions": "Interactions",
@@ -43,9 +48,70 @@
   "Experiment Not Found": "Expérience non trouvée",
   "Interaction Not Found": "Interaction non trouvée",
   "No Input": "Aucune entrée",
+  "Input Type": "Type d'entrée",
   "Exchange Not Found": "Échange non trouvé",
   "Back": "Retour",
   "Message": "Message",
   "Not At All": "Pas du tout",
-  "Very Strongly": "Tout à fait"
+  "Very Strongly": "Tout à fait",
+  "Settings": "Paramètres",
+  "Edit Settings": "Éditer Paramètres",
+  "Reset to Default Settings": "Restaurer les paramètres par défaut",
+  "Search": "Recherche",
+  "Order": "Ordre",
+  "Soft Limit": "Limite Large",
+  "Hard Limit": "Limite Stricte",
+  "New Simulation": "Nouvelle Simulation",
+  "New Experiment": "Nouvelle Expérience",
+  "New Trigger": "Nouveau Déclencheur",
+  "Template": "Modèle-Type",
+  "Templates": "Modèles-Type",
+  "New Interaction Template": "Nouveau Modèle d'Interaction",
+  "New Exchange Template": "Nouveau Modèle d'Échange",
+  "Artificial": "Artificiels",
+  "Human": "Humains",
+  "Evaluators": "Évaluateurs",
+  "Evaluator": "Évaluateur",
+  "New Artificial Assistant": "Nouvel Assistant Artificiel",
+  "New Artificial Participant": "Nouveau Participant Artificiel",
+  "New Artificial Evaluator": "Nouvel Évaluateur Artificiel",
+  "New Human Assistant": "Nouvel Assistant Humain",
+  "New Human Participant": "Nouveau Participant Humain",
+  "New Agent": "Nouvel Agent",
+  "Name": "Nom",
+  "Criteria": "Critères",
+  "Experiment": "Expérience",
+  "Trigger": "Déclencheur",
+  "This is the experiment's name.": "Ceci est le nom de l'expérience.",
+  "This is the simulation's name.": "Ceci est le nom de la simulation.",
+  "This is the trigger's name.": "Ceci est le nom du déclencheur.",
+  "This is the agent's name.": "Ceci est le nom de l'Agent.",
+  "This is an internal description for this trigger.": "Ceci est une description interne pour ce déclencheur.",
+  "This is an internal description for this simulation.": "Ceci est une description interne pour cette simulation.",
+  "This is an internal description for this experiment.": "Ceci est une description interne pour cette expérience.",
+  "Model Instructions": "Instructions pour le Modèle",
+  "Instructions On Complete": "Instructions après complétion",
+  "Participant Instructions": "Instructions pour les participants",
+  "Participant Instructions On Complete": "Instructions pour les participants après complétion",
+  "Exchange Template": "Modèle-type d'échange",
+  "Exchange Templates": "Modèles-type d'échange",
+  "Exchange Template Not Found": "Modèle-type d'Échange introuvable",
+  "Trigger Not Found": "Déclencheur introuvable",
+  "Agent Not Found": "Agent introuvable",
+  "This is this agent's description, which will be sent to the language model.": "Ceci est la description, qui sera envoyée au Modèle de traitement de langage",
+  "This is an internal name for this exchange template.": "Ceci est un nom interne pour ce modèle-type d'échange",
+  "This is an internal description for this exchange template.": "Ceci est une description interne pour ce modèle-type d'échange",
+  "These are the instructions that will be sent to the language model.": "Ces instructions seront envoyées au Modèle de traitement de language.",
+  "This is the interaction template's name.": "Ceci est le modèle-type d'Interaction.",
+  "This is an internal description for this interaction template.": "Ceci est une description interne pour ce modèle-type d'interaction.",
+  "These are the instructions that will be shown to participants at the start of the interaction.": "Ces instructions seront montrées aux participants au début de l'interaction.",
+  "These are the instructions that are shown to the participant when the interaction has been marked as completed.": "Ces instructions sont montrées au participant lorsque l'interaction a été marquée comme terminée.",
+  "When the exchange reaches this total number of user messages, the exchange will be marked as completed. Participants will be able to continue to send messages, but they will be also able to dismiss the exchange. Zero means there is no limit.": "Lorsque l'échange atteint ce nombre total de messages utilisateur, il sera marqué comme terminé. Les participants pourront continuer à envoyer des messages, mais ils auront également la possibilité de clôturer l'échange. Zéro signifie qu'il n'y a pas de limite.",
+  "When the exchange reaches this total number of user messages, the exchange will be marked as blocked. Participants will not longer be able to send messages. Zero means there is no limit.": "Lorsque l'échange atteint ce nombre total de messages utilisateur, il sera marqué comme bloqué. Les participants ne pourront plus envoyer de messages. Zéro signifie qu'il n'y a pas de limite.",
+  "These are the instructions that are shown to the participant when the exchange has been marked as completed.": "Ces instructions sont montrées au participant lorsque l'échange a été marqué comme terminé.",
+  "Page 1 of 10": "Page 1 sur 10",
+  "Select an AI model to process and generate responses.": "Sélectionnez un modèle d'IA pour traiter et générer des réponses.",
+  "Your OpenAI API key is used to communicate with the OpenAI services.": "Votre clé API OpenAI est utilisée pour communiquer avec les services OpenAI.",
+  "This is the language of the Botticelli interface.": "Ceci est la langue de l'interface Botticelli.",
+  "Models may vary in accuracy, speed and cost.": "Les modèles peuvent varier en termes de précision, de rapidité et de coût."
 }
